Add additional info

--- a/03 - Weather App/style.css
+++ b/03 - Weather App/style.css
@@ -70,6 +70,10 @@
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.19);
     }
 
+    div.days:hover {
+      cursor: pointer;
+    }
+
     .degreeIcon {
       height: 15px;
       width: 15px;
